# LensCull

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/Exceptions/: EmptyFolderException.py  FolderNotFoundException.py  NotImageException.py  UnsupportedFileTypeException.py
src/processing/: Image_obj.py  image_loader.py  log_inicialization.py  parallel.py  quality.py  similarity.py
src/tests/: test_image.py  test_image_loader.py  test_quality.py  test_similarity.py
